# cmcg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  editor.html  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: compositor.rs  main.rs  manifest.rs  renderer.rs  resolver.rs  server.rs
docs/: product-design.html
sample/: manifest.json
src/: editor-main.ts  editor.css  main.ts  style.css
src/editor/: BundleExporter.ts  PropertyPanel.ts  SlotEditor.ts  Timeline.ts
src/export/: MP4Exporter.ts
src/loader/: BundleLoader.ts
src/player/: CMCGPlayer.ts  SourceResolver.ts
src/types/: manifest.ts
src/utils/: urlParams.ts
