[package]
name = "cmcg-cli"
version = "0.1.0"
edition = "2021"
description = "CMCG CLI renderer — render .cmcg templates to MP4"
license = "BUSL-1.1"

[[bin]]
name = "cmcg"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# ZIP bundle
zip = "2"

# Image processing
image = "0.25"
rusttype = "0.9"

# Temp files
tempfile = "3"

# Error handling
anyhow = "1"

# Progress
indicatif = "0.17"
